--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_PROJECT_ID=wedding-quote-app
 REACT_APP_FIREBASE_STORAGE_BUCKET=wedding-quote-app.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1019978209954
 REACT_APP_FIREBASE_APP_ID=1:1019978209954:web:2ce6ebdb1b42c0b7d495fb
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-MK289KSHB8
